# claude_code

./: .gitignore  .gitleaks.toml  README.md
agents/: README.md  ai-engineer.md  ai-research-scientist.md  assumption-checker.md  cleanup-specialist.md  code-reviewer.md  documentation-finder.md  edge-case-finder.md  empirical-validator.md  execution-orchestrator.md  large-file-reader.md  online-researcher.md  performance-profiler.md  planning-architect.md  simplicity-advocate.md  software-engineer.md  test-guardian.md
commands/: README.md  joke.md
container/: .dockerignore  Dockerfile  README.md  build.sh  claude_common_lib.sh  claude_settings_lib.sh  doctor.sh  dry_run.sh  merge_settings.py  pyproject.toml  run.sh  run_command.sh  run_sequence.sh  run_sequence_handoff.sh  run_sequence_incontext.sh  run_sequence_prompts.sh
docs/: README.md  docs.claude.com_2025-09-29T22-33-56-456Z.md  docs.claude.com_2025-09-30T10-14-58-409Z.md  project-preferences.md
hooks/: multiworkflow.py
